src/objects/KS_Jerarquia_Cliente__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Objeto para almacenar la estructura jerárquica de las cuentas, proviniente de SAP y algunas manuales.</description>
    <fields>
        <fullName>KS_Asignacion_de_jerarquia__c</fullName>
        <label>Asignacion de jerarquia</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Canal_de_distribucion__c</fullName>
        <label>Canal de distribución</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Canal_de_distribucion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Canal_de_distribucion_superior__c</fullName>
        <label>Canal de distribución superior</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Canal_de_distribucion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Cliente_Superior__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente Superior</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Jerarquia Clientes (Cliente Superior)</relationshipLabel>
        <relationshipName>Jerarquia_Clientes_Superior</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Cliente__c</fullName>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Jerarquia Clientes</relationshipLabel>
        <relationshipName>Jerarquia_Clientes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>KS_Fin_de_validez_de_la_asignacion__c</fullName>
        <label>Fin de validez de la asignación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_ID_Jerarquia__c</fullName>
        <externalId>true</externalId>
        <label>ID Jerarquia</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KS_Inicio_de_validez_de_la_asignacion__c</fullName>
        <label>Inicio de validez de la asignación</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Nombre_Cliente_Superior__c</fullName>
        <formula>KS_Cliente_Superior__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre Cliente Superior</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Nombre_Cliente__c</fullName>
        <formula>KS_Cliente__r.KS_Descriptivo_Cuenta__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Organizacion_de_ventas__c</fullName>
        <label>Organizacion de ventas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Organizacion_de_ventas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Organizacion_de_ventas_superior__c</fullName>
        <label>Organizacion de ventas superior</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Organizacion_de_ventas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Sector__c</fullName>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Tipo_Sector</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Sector_superior__c</fullName>
        <label>Sector superior</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Tipo_Sector</valueSetName>
        </valueSet>
    </fields>
    <label>Jerarquia Cliente</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>KS_ID_Jerarquia__c</columns>
        <columns>KS_Cliente_Superior__c</columns>
        <columns>KS_Cliente__c</columns>
        <columns>KS_Canal_de_distribucion_superior__c</columns>
        <columns>KS_Canal_de_distribucion__c</columns>
        <columns>KS_Sector_superior__c</columns>
        <columns>KS_Sector__c</columns>
        <columns>KS_Organizacion_de_ventas_superior__c</columns>
        <columns>KS_Organizacion_de_ventas__c</columns>
        <columns>KS_Asignacion_de_jerarquia__c</columns>
        <columns>KS_Fin_de_validez_de_la_asignacion__c</columns>
        <columns>KS_Inicio_de_validez_de_la_asignacion__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>KS_Jerarquias_Adhoc</fullName>
        <columns>NAME</columns>
        <columns>KS_Cliente__c</columns>
        <columns>KS_Organizacion_de_ventas__c</columns>
        <columns>KS_Canal_de_distribucion__c</columns>
        <columns>KS_Sector__c</columns>
        <columns>KS_Fin_de_validez_de_la_asignacion__c</columns>
        <columns>KS_Inicio_de_validez_de_la_asignacion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KS_ID_Jerarquia__c</field>
            <operation>contains</operation>
            <value>dakota</value>
        </filters>
        <label>Jerarquias Adhoc</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>JC-{00000}</displayFormat>
        <label>Jerarquia Cliente Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jerarquia Clientes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>